--- a/style.css
+++ b/style.css
@@ -318,48 +318,56 @@ body::before {
     top: calc(35vh + 60px);
     left: 42vw;
     transform: translateX(-50%) translateY(-20px);
+    transition: all 0.5s ease-in-out;
   }
 
   .work-dropdown.show,
   .contact-dropdown.show,
   .about-dropdown.show {
     transform: translateX(-50%) translateY(0);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-about .work-dropdown,
   .main-menu.center-about .contact-dropdown,
   .main-menu.center-about .about-dropdown {
     transform: translateX(-50%) translateY(-20px) translateX(33.33vw);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-about .work-dropdown.show,
   .main-menu.center-about .contact-dropdown.show,
   .main-menu.center-about .about-dropdown.show {
     transform: translateX(-50%) translateY(0) translateX(33.33vw);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-work .work-dropdown,
   .main-menu.center-work .contact-dropdown,
   .main-menu.center-work .about-dropdown {
     transform: translateX(-50%) translateY(-20px) translateX(0%);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-work .work-dropdown.show,
   .main-menu.center-work .contact-dropdown.show,
   .main-menu.center-work .about-dropdown.show {
     transform: translateX(-50%) translateY(0) translateX(0%);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-contact .work-dropdown,
   .main-menu.center-contact .contact-dropdown,
   .main-menu.center-contact .about-dropdown {
     transform: translateX(-50%) translateY(-20px) translateX(-33.33vw);
+    transition: all 0.5s ease-in-out;
   }
 
   .main-menu.center-contact .work-dropdown.show,
   .main-menu.center-contact .contact-dropdown.show,
   .main-menu.center-contact .about-dropdown.show {
     transform: translateX(-50%) translateY(0) translateX(-33.33vw);
+    transition: all 0.5s ease-in-out;
   }
 }
 
